Fix layout issues with dialogs Angular Material 0.9.0 changed syntax for mdDialog contents.

--- a/src/styles/ui-components.less
+++ b/src/styles/ui-components.less
@@ -74,6 +74,7 @@
   border-radius: 2px;
   transition: background-color 0.2s, color 0.2s;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.1);
+  margin: 0 4px;
 
   &:not([disabled]):hover {
     background-color: @color-silver;
